[gd_scene load_steps=3 format=3 uid="uid://hrxrnsq4m0uc"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_woogm"]
[ext_resource type="Texture2D" uid="uid://467yruotxg17" path="res://UI/main_menu_background.jpg" id="2_nr01l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_woogm")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_nr01l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 387.0
offset_right = 368.0
offset_bottom = 519.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "PLAY"

[node name="options_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "OPTIONS"

[node name="quit_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
